--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "firebase": "^11.6.0",
     "genkit": "^1.0.4",
     "lucide-react": "^0.475.0",
-    "next": "^15.3.0",
+    "next": "14.1.4",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "*",
